# rs485-labtest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GUIA_LINUX.md  HANDOFF.md  NDR6_MATRIX.md  NOTES_SUPORT_REMOT.md  SETUP.md  TESTPLAN.md
legacy/: rs485_labtest_v2.py
scripts/: demo_tui.py
src/rs485_labtest/: __init__.py  __main__.py  battery.py  catalog.py  cli.py  engine.py  interfaces.py  monitor.py  notify.py  patterns.py  protocol.py  report.py  slave.py  transport.py  wizard.py
tests/: fakes.py  test_baud.py  test_catalog.py  test_cli.py  test_duts.py  test_fullduplex.py  test_integration.py  test_interfaces.py  test_monitor.py  test_notify.py  test_protocol.py  test_report.py  test_verdict.py  test_wizard.py
